web/env/Main1136/stderr.txt
./env/Main1136/Main1136.java:1: error: class, interface, or enum expected
while True:
^
1 error
